[tool.poetry]
name = "i-am-ok-bot"
version = "0.1.0"
description = "A telegram bot that tells others if I'm okay"
authors = ["Galina Volkova <earlinndrow@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "i_am_ok_bot"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
